--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <section>
         <h2>Obrazek</h2>
-        <img src="images/example.jpg" alt="Przykładowy obrazek">
+        <img src="odd_cat_beer.png" alt="Przykładowy obrazek">
     </section>
 
     <section>
